<resources>
    <string name="app_name">Vermipro Market</string>
    <string name="title_activity_products">ProductsActivity</string>
    <string name="title_activity_product_detail">Product Detail</string>
    <string name="title_activity_old_orders">Old Orders</string>
    <string name="title_activity_one_time_login">One Time Login</string>
    <string name="title_activity_verification">Verify account</string>
    <string name="title_activity_register">Register</string>
    <string name="what_is_your_name">What is your name?</string>
    <string name="what_is_your_phone_number">What is your phone number</string>
    <string name="_256772123456">e.g 0772123456</string>
    <string name="what_is_your_email_address">What is your email address?</string>
    <string name="user_example_com">user@example.com</string>
    <string name="e_g_wakiso_district">e.g Wakiso district</string>
    <string name="where_do_you_live">Where do you live?</string>
    <string name="e_g_john_peter">e.g John Peter</string>
    <string name="register">Register</string>
    <string name="enter_the_verification_code">Enter the verification code</string>
    <string name="activate_account">Activate account</string>
    <string name="this_was_sent_to_the_phone_number_or_email_that_you_provided">This was sent to the phone number or email that you provided</string>
    <string name="resend_the_verification_code">Resend the verification code</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="what_do_you_have_to_say">Where should we deliver your product?</string>
    <string name="howmany">How many do you want to buy?</string>
    <string name="i_will_pay_on_delivery">I will Pay on delivery</string>
    <string name="pay_with_mobile_money">Pay with mobile money</string>
    <string name="address">Address</string>
    <string name="additional_charge">Additional charge</string>
    <string name="delivery_address">Delivery address</string>
    <string name="buy_now">Buy now</string>
    <string name="quantity">Quantity</string>
    <string name="enter_your_email_address">Enter your Email address</string>
    <string name="status">Status</string>
    <string name="orders">View all my Orders</string>
    <string name="place_order">Place your order</string>
    <string name="how_do_you_want_to_receive_this_product">How do you want to receive this product?</string>
    <string name="select_the_nearest_from_out_pick_up_locations">Select the nearest from out pick-up locations</string>
    <string name="title_activity_front">Vermipro Market</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="livestock">LIVESTOCK FARMING</string>
    <string name="poultry">POULTRY FARMING</string>
    <string name="vegetables_and_crops">VEGETABLES AND CROPS</string>
    <string name="farm_management">FARM MANAGEMENT</string>
    <string name="fish_farming">FISH FARMING</string>
    <string name="contact_us">CONTACT US</string>
    <string name="plot_64_chorley_cresent_luzira_kampala">Plot 64, Chorley Cresent, Luzira-Kampala</string>
    <string name="_256781000053_256781000046_256393216399">+256781000053 | +256781000046 | +256393216399</string>
    <string name="info_vermiproug_com">info@vermiproug.com</string>
    <string name="view_all">View all</string>
    <string name="features_products">FEATURED PRODUCTS</string>
 </resources>
