<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".FrontActivity"
    tools:showIn="@layout/activity_front">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/myorders"
            android:textSize="@dimen/fab_margin"
            android:gravity="end|top"
            android:textColor="@color/colorPrimary"
            android:layout_margin="@dimen/fab_margin"
            android:text="@string/orders"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <GridView
                android:layout_width="match_parent"
                android:layout_height="600dp"
                android:numColumns="2"
                android:id="@+id/categories"/>

        </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size"
                    android:layout_margin="@dimen/fab_margin"
                    android:text="@string/contact_us"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_margin="@dimen/fab_margin"
                    android:text="@string/plot_64_chorley_cresent_luzira_kampala"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_margin="@dimen/fab_margin"
                    android:text="@string/_256781000053_256781000046_256393216399"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_margin="@dimen/fab_margin"
                    android:paddingBottom="@dimen/text_size"
                    android:text="@string/info_vermiproug_com"/>

            </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>